[package]
name = "label-macros"
version = "0.1.0"
authors = ["jonay2000 <jonabent@gmail.com>"]
edition = "2018"


[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0.33", features=["full"]}
quote = "1.0.7"
lazy_static = "1.4.0"
