[package]
name = "label-macros"
version = "0.1.3"
authors = ["jonay2000 <jonabent@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Label functions and iterate over them."
documentation = "https://docs.rs/label"
repository = "https://github.com/jonay2000/label"
homepage = "https://github.com/jonay2000/label"
readme = "../README.md"


[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0.33", features=["full"]}
quote = "1.0.7"
lazy_static = "1.4.0"
