[package]
name = "label"
version = "0.5.0"
authors = ["jonay2000 <jonabent@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Label functions and iterate over them."
documentation = "https://docs.rs/label"
repository = "https://github.com/jonay2000/label"
homepage = "https://github.com/jonay2000/label"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
label-macros = {path="../label-macros", version="0.5.0"}
ctor = "0.1.15"
